@@ -89,6 +89,7 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
                         test.systemProperty("java.locale.providers", "SPI,COMPAT");
                         test.jvmArgs(
                             "--illegal-access=deny",
+                            "-Djava.security.manager=allow",
                             // TODO: only open these for mockito when it is modularized
                             "--add-opens=java.base/java.security.cert=ALL-UNNAMED",
                             "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
